# Tutorial-Codebase-Knowledge

./: .cursorrules  .env.sample  .gitignore  README.md  book.toml  flow.py  main.py  mermaid-init.js  nodes.py  pyproject.toml
.cursor/rules/: git-auto-commit.mdc  global.mdc  minimal-comment.mdc
book/: 404.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
book/AutoGen Core/: index.html
book/Browser Use/: index.html
book/Celery/: index.html
book/Click/: index.html
book/Codex/: index.html
book/Crawl4AI/: index.html
book/CrewAI/: index.html
book/DSPy/: index.html
book/FastAPI/: index.html
book/Flask/: index.html
book/Google A2A/: index.html
book/LangGraph/: index.html
book/LevelDB/: index.html
book/MCP Python SDK/: index.html
book/NumPy Core/: index.html
book/OpenManus/: index.html
book/Pydantic Core/: index.html
book/Requests/: index.html
book/Revm/: 01_context___environment_.html  02_host_interface_.html  03_state___database_layers_.html  04_gas_management_.html  05_bytecode___opcodes_.html  06_precompiles_.html  07_interpreter_.html  08_frame___call_handling_.html  09_handler___execution_loop_.html  10_inspector___tracing_.html  index.html
book/SmolaAgents/: index.html
docs/: SUMMARY.md
docs/Revm/: 01_context___environment_.md  02_host_interface_.md  03_state___database_layers_.md  04_gas_management_.md  05_bytecode___opcodes_.md  06_precompiles_.md  07_interpreter_.md  08_frame___call_handling_.md  09_handler___execution_loop_.md  (+2 more)
utils/: call_llm.py  crawl_github_files.py  crawl_local_files.py
(+21 files in other folders)
