[project]
name = "tutorial-codebase-knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.44",
    "litellm>=1.67.0",
    "pocketflow>=0.0.2",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "google-cloud-aiplatform>=1.56.0",
]
